@@ -1,0 +1,2 @@
+Add keywords to module name completion list.  Rewrite Completions
+section of IDLE doc.
